# perprof-web

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE.md  README.dev.md  README.md  pyproject.toml
.github/workflows/: deploy.yml  lint.yml
docker/: Dockerfile
perprof_web/: __init__.py  app.py  plotting.py  views.py
perprof_web/templates/: base.html  index.html  solver.html  solvers.html
