[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perprof-web"
authors = [
  {name = "Abel Soares Siqueira", email = "abel.s.siqueira@gmail.com"},
]
description = "Web interface for perprof-py"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["benchmark", "comparison", "performance profile", "flask"]
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python"
]
dependencies = [
  "flask>=2,<3",
  "perprof-py>=1.1.4,<2",
  "matplotlib>=3,<4",
]
version = "0.0.2"

[project.optional-dependencies]
dev = [
  "black",
  "pre-commit",
  "ruff",
  "pylint",
  "pytest",
  "pytest-cov",
]
publishing = [
  "twine"
]
docs = [
  "mkdocs",
  "mkdocstrings[python]",
  "mkdocs-material",
  "mike"
]

[project.urls]
repository = "https://github.com/abelsiqueira/perprof-web"
documentation = "https://abelsiqueira.com/perprof-web/"

[tool.isort]
lines_after_impots = 2
force_single_line = 1
src_paths = "perprof_web,tests"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["perprof*"]
exclude = ["docker", "tests*"]
namespaces = false
